# app

./: Cargo.toml  READEM.md
migrations/: 20260422222949_create_users_table.sql  20260423064732_create_categories_table.sql
src/: db.rs  main.rs  middleware.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs
